--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^1.1.0
   d_method: ^0.2.1
   intl: ^0.18.1
+  d_view: ^0.0.3
+  d_info: ^0.2.2
 
 dev_dependencies:
   flutter_test:
